jumping fix

--- a/src/components/swap-form/rate-info/rate-info.module.css
+++ b/src/components/swap-form/rate-info/rate-info.module.css
@@ -5,7 +5,7 @@
     justify-content: flex-end;
     margin-bottom: var(--2-step);
     color: var(--hint-color);
-    min-height: 23px;
+    height: 22px;
 }
 
 .guarantee_container {
